--- a/post-detail/index.html
+++ b/post-detail/index.html
@@ -111,10 +111,10 @@ var quillFull = new Quill('#document-full', {
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        
+
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Dev Blog Web</a>
+        <a class="blog-header-logo text-dark" href="../index.html">Dev Blog Web</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="btn btn-sm btn-outline-secondary" href="sign-in/index.html">Entrar</a>
@@ -139,7 +139,7 @@ var quillFull = new Quill('#document-full', {
     </nav>
   </div>
 
-  
+
 <main role="main" class="container pt-3">
   <div class="row">
     <div class="col-md-12 blog-main">
