--- a/admin/usuarios/index.html
+++ b/admin/usuarios/index.html
@@ -9,10 +9,10 @@
     <title>Adm Panel</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="admin.css" rel="stylesheet">
+    <link href="usuarios.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="usuarios/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="users"></span>
                   Usuários
                 </a>
@@ -82,13 +82,75 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-          </div>
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-            <h1 class="h4"> <span class="arrow-text" data-feather="arrow-left"></span> Bem vindo à tela de administração, utilize os menus laterais para gerenciar a aplicação</h1>
-          </div>
-
+          <form action="#">
+            <h2>Usuários</h2>
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Nome</th>
+                    <th>E-Mail</th>
+                    <th>CPF</th>
+                    <th>Papel</th>
+                    <th>Autorizado</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>James</td>
+                    <td>james@devweb.com.br</td>
+                    <td>123.456.789-87</td>
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio11" value="Administrador" checked>
+                        <label class="form-check-label" for="radio11">Administrador</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio21" value="Autor">
+                        <label class="form-check-label" for="radio21">Autor</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio31" value="Comentarista">
+                        <label class="form-check-label" for="radio31">Comentarista</label>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="authorized1" id="authorized1" value="TRUE" checked>
+                        <label class="form-check-label" for="autorized1">Autorizado</label>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Joane</td>
+                    <td>joane@devweb.com.br</td>
+                    <td>123.456.789-88</td>
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio12" value="Administrador">
+                        <label class="form-check-label" for="radio12">Administrador</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio22" value="Autor" checked>
+                        <label class="form-check-label" for="radio22">Autor</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio32" value="Comentarista">
+                        <label class="form-check-label" for="radio32">Comentarista</label>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE" checked>
+                        <label class="form-check-label" for="autorized2">Autorizado</label>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <button type="submit" class="btn float-right btn-primary">Salvar</button>
+          </form>
         </main>
       </div>
     </div>
