Mensagem de entrada ao fazer login -Links de admin levando a pagina inciial -Link do dashboard na pagina de usuario levando ao dahsboard

--- a/admin/usuarios/index.html
+++ b/admin/usuarios/index.html
@@ -31,7 +31,7 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="../index.html">
                   <span data-feather="home"></span>
                   Dashboard <span class="sr-only">(current)</span>
                 </a>
@@ -41,7 +41,7 @@
                   <span data-feather="users"></span>
                   Usuários
                 </a>
-              </li>              
+              </li>
             </ul>
 
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
