--- a/admin/index.html
+++ b/admin/index.html
@@ -18,6 +18,9 @@
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
+      <ci class = "centerinfo">
+        <strong>  Olar</strong>
+      </ci>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
           <a class="nav-link" href="#">Sair</a>
@@ -41,7 +44,7 @@
                   <span data-feather="users"></span>
                   Usuários
                 </a>
-              </li>              
+              </li>
             </ul>
 
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
