--- a/admin/index.html
+++ b/admin/index.html
@@ -17,13 +17,13 @@
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="../index.html">Blog Dev</a>
       <ci class = "centerinfo">
         <strong>  Olar</strong>
       </ci>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sair</a>
+          <a class="nav-link" href="../index.html">Sair</a>
         </li>
       </ul>
     </nav>
