--- a/admin/meus-posts/index.html
+++ b/admin/meus-posts/index.html
@@ -9,10 +9,10 @@
     <title>Adm Panel</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="admin.css" rel="stylesheet">
+    <link href="usuarios.css" rel="stylesheet">
   </head>
 
   <body>
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="usuarios/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="users"></span>
                   Usuários
                 </a>
@@ -49,19 +49,19 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="novo-post/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="plus-circle"></span>
                   Nova Postagem
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meus-posts/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file"></span>
                   Minhas Postagens
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-post/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -72,7 +72,7 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-comentario/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -82,13 +82,43 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-          </div>
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-            <h1 class="h4"> <span class="arrow-text" data-feather="arrow-left"></span> Bem vindo à tela de administração, utilize os menus laterais para gerenciar a aplicação</h1>
-          </div>
-
+          <form action="#" method="POST">
+            <h2>Aprovações de Postagens</h2>
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Titulo</th>
+                    <th>Data</th>
+                    <th>Link</th>
+                    <th>Liberar</th>
+                    <th>Status</th>
+                    <th>Outras Opções</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Como fazer posts interessantes</td>
+                    <td>18/10/2020 18:32</td>
+                    <td><a href="#" class="pl-2"><span data-feather="share"></span></a></td>
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE" checked>
+                        <label class="form-check-label" for="autorized2">Liberado</label>
+                      </div>
+                    </td>
+                    <td>Pendente</td>
+                    <td>                      
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Editar" data-feather="edit"></span></a>
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Excluir" data-feather="trash"></span></a>
+                    </td>
+                  </tr>
+                  <tr>
+                </tbody>
+              </table>
+            </div>
+            <button type="submit" class="btn float-right btn-primary">Salvar</button>
+          </form>
         </main>
       </div>
     </div>
@@ -97,12 +127,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 
     <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>
       feather.replace()
-    </script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>   
   </body>
 </html>
