--- a/admin/aprovacoes-post/index.html
+++ b/admin/aprovacoes-post/index.html
@@ -83,67 +83,50 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           <form action="#" method="POST">
-            <h2>Usuários</h2>
+            <h2>Aprovações de Postagens</h2>
             <div class="table-responsive">
               <table class="table table-striped table-sm">
                 <thead>
                   <tr>
-                    <th>Nome</th>
-                    <th>E-Mail</th>
-                    <th>CPF</th>
-                    <th>Papel</th>
+                    <th>Titulo</th>
+                    <th>Data</th>
+                    <th>Autor</th>
+                    <th>Link</th>
                     <th>Autorizado</th>
+                    <th>Outras Opções</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                    <td>Como fazer posts interessantes</td>
+                    <td>18/10/2020 18:32</td>
                     <td>James</td>
-                    <td>james@devweb.com.br</td>
-                    <td>123.456.789-87</td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio11" value="Administrador" checked>
-                        <label class="form-check-label" for="radio11">Administrador</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio21" value="Autor">
-                        <label class="form-check-label" for="radio21">Autor</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio31" value="Comentarista">
-                        <label class="form-check-label" for="radio31">Comentarista</label>
-                      </div>
-                    </td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="authorized1" id="authorized1" value="TRUE" checked>
-                        <label class="form-check-label" for="autorized1">Autorizado</label>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Joane</td>
-                    <td>joane@devweb.com.br</td>
-                    <td>123.456.789-88</td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio12" value="Administrador">
-                        <label class="form-check-label" for="radio12">Administrador</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio22" value="Autor" checked>
-                        <label class="form-check-label" for="radio22">Autor</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio32" value="Comentarista">
-                        <label class="form-check-label" for="radio32">Comentarista</label>
-                      </div>
-                    </td>
+                    <td ><a href="#" class="pl-2"><span data-feather="share"></span></a></td>
                     <td>
                       <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE" checked>
                         <label class="form-check-label" for="autorized2">Autorizado</label>
                       </div>
+                    </td>
+                    <td>                      
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Editar" data-feather="edit"></span></a>
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Excluir" data-feather="trash"></span></a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>O desenvolvimento da TI em meio à IA</td>
+                    <td>16/10/2020 17:22</td>
+                    <td>Joane</td>
+                    <td><a href="#" class="pl-2"><span data-feather="share"></span></a></td>                    
+                    <td>
+                      <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE">
+                        <label class="form-check-label" for="autorized2">Autorizado</label>
+                      </div>
+                    </td>
+                    <td>                      
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Editar" data-feather="edit"></span></a>
+                      <a href="#" class="pl-2"><span data-toggle="tooltip" data-placement="bottom" title="Excluir" data-feather="trash"></span></a>
                     </td>
                   </tr>
                 </tbody>
@@ -159,46 +142,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 
     <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>
       feather.replace()
-    </script>
-
-    <!-- Graphs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
-    </script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>    
   </body>
 </html>
