--- a/admin/novo-post/index.html
+++ b/admin/novo-post/index.html
@@ -8,11 +8,15 @@
 
     <title>Adm Panel</title>
 
+    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.css">
+    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.snow.css">
+    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.bubble.css">
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="admin.css" rel="stylesheet">
+    <link href="usuarios.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -37,7 +41,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="usuarios/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="users"></span>
                   Usuários
                 </a>
@@ -49,19 +53,19 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="novo-post/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="plus-circle"></span>
                   Nova Postagem
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meus-posts/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file"></span>
                   Minhas Postagens
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-post/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -72,7 +76,7 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-comentario/index.html">
+                <a class="nav-link" href="#">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -82,13 +86,16 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-          </div>
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-            <h1 class="h4"> <span class="arrow-text" data-feather="arrow-left"></span> Bem vindo à tela de administração, utilize os menus laterais para gerenciar a aplicação</h1>
-          </div>
-
+          <form action="#">
+            <h2>Novo Post</h2>
+            <div>
+              <div class="editor-full">
+                <div id="document-full" class="ql-scroll-y" style="height: 300px;">
+                </div>
+              </div>
+            </div>
+            <button id="send-post" class="btn float-right btn-primary mt-3 px-5 py-2">Salvar</button>
+          </form>
         </main>
       </div>
     </div>
@@ -97,12 +104,17 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="../../assets/modules/quill/dist/sprite.svg.js"></script>
+    <script src="../../assets/modules/quill/dist/bootstrap-quill.js"></script>
+    <script src="novo-post.js"></script>
 
     <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>
       feather.replace()
-    </script>
+    </script>    
   </body>
 </html>
