--- a/admin/usuarios/index.html
+++ b/admin/usuarios/index.html
@@ -1,204 +1,197 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Adm Panel</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
+  <title>Adm Panel</title>
 
-    <!-- Custom styles for this template -->
-    <link href="usuarios.css" rel="stylesheet">
-  </head>
+  <!-- Bootstrap core CSS -->
+  <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
 
-  <body>
-    <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sair</a>
-        </li>
-      </ul>
-    </nav>
+  <!-- Custom styles for this template -->
+  <link href="usuarios.css" rel="stylesheet">
+</head>
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="../index.html">
-                  <span data-feather="home"></span>
-                  Dashboard <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="users"></span>
-                  Usuários
-                </a>
-              </li>
-            </ul>
+<body>
+  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
+    <ul class="navbar-nav px-3">
+      <li class="nav-item text-nowrap">
+        <a class="nav-link" href="#">Sair</a>
+      </li>
+    </ul>
+  </nav>
 
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-              <span>Postagens</span>
-            </h6>
-            <ul class="nav flex-column mb-2">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="plus-circle"></span>
-                  Nova Postagem
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file"></span>
-                  Minhas Postagens
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Aprovações
-                </a>
-              </li>
-            </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-              <span>Comentários</span>
-            </h6>
-            <ul class="nav flex-column mb-2">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Aprovações
-                </a>
-              </li>
-            </ul>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="../index.html">
+                <span data-feather="home"></span>
+                Dashboard <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="users"></span>
+                Usuários
+              </a>
+            </li>
+          </ul>
+
+          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+            <span>Postagens</span>
+          </h6>
+          <ul class="nav flex-column mb-2">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="plus-circle"></span>
+                Nova Postagem
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="file"></span>
+                Minhas Postagens
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="file-text"></span>
+                Aprovações
+              </a>
+            </li>
+          </ul>
+          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+            <span>Comentários</span>
+          </h6>
+          <ul class="nav flex-column mb-2">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span data-feather="file-text"></span>
+                Aprovações
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+        <form action="#" method="POST">
+          <h2>Usuários</h2>
+          <div class="table-responsive">
+            <table class="table table-striped table-sm">
+              <thead>
+                <tr>
+                  <th>Nome</th>
+                  <th>E-Mail</th>
+                  <th>CPF</th>
+                  <th>Papel</th>
+                  <th>Categoria</th>
+                  <th>Autorizado</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>James</td>
+                  <td>james@devweb.com.br</td>
+                  <td>123.456.789-87</td>
+                  <td>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio1" id="radio11" value="Administrador"
+                        checked>
+                      <label class="form-check-label" for="radio11">Administrador</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio1" id="radio21" value="Autor">
+                      <label class="form-check-label" for="radio21">Autor</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio1" id="radio31" value="Comentarista">
+                      <label class="form-check-label" for="radio31">Comentarista</label>
+                    </div>
+                  </td>
+                  <td>
+                    <select class="categoria custom-select" id="categoriaselect1" data-connect="papelradio1" disabled>
+                      <option selected>Escolha</option>
+                      <option value="1">Cat1</option>
+                      <option value="2">Cat2</option>
+                      <option value="3">Cat3</option>
+                    </select>
+                  </td>
+                  <td>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="checkbox" name="authorized1" id="authorized1" value="TRUE"
+                        checked>
+                      <label class="form-check-label" for="autorized1">Autorizado</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Joane</td>
+                  <td>joane@devweb.com.br</td>
+                  <td>123.456.789-88</td>
+                  <td>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio2" id="radio12"
+                        value="Administrador">
+                      <label class="form-check-label" for="radio12">Administrador</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio2" id="radio22" value="Autor"
+                        checked>
+                      <label class="form-check-label" for="radio22">Autor</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="papelradio2" id="radio32" value="Comentarista">
+                      <label class="form-check-label" for="radio32">Comentarista</label>
+                    </div>
+                  </td>
+                  <td>
+                    <select class="categoria custom-select" id="categoriaselect2" data-connect="papelradio2">
+                      <option selected>Escolha</option>
+                      <option value="1">Cat1</option>
+                      <option value="2" selected>Cat2</option>
+                      <option value="3">Cat3</option>
+                    </select>
+                  </td>
+                  <td>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE"
+                        checked>
+                      <label class="form-check-label" for="autorized2">Autorizado</label>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-        </nav>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <form action="#" method="POST">
-            <h2>Usuários</h2>
-            <div class="table-responsive">
-              <table class="table table-striped table-sm">
-                <thead>
-                  <tr>
-                    <th>Nome</th>
-                    <th>E-Mail</th>
-                    <th>CPF</th>
-                    <th>Papel</th>
-                    <th>Autorizado</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>James</td>
-                    <td>james@devweb.com.br</td>
-                    <td>123.456.789-87</td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio11" value="Administrador" checked>
-                        <label class="form-check-label" for="radio11">Administrador</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio21" value="Autor">
-                        <label class="form-check-label" for="radio21">Autor</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup1" id="radio31" value="Comentarista">
-                        <label class="form-check-label" for="radio31">Comentarista</label>
-                      </div>
-                    </td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="authorized1" id="authorized1" value="TRUE" checked>
-                        <label class="form-check-label" for="autorized1">Autorizado</label>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Joane</td>
-                    <td>joane@devweb.com.br</td>
-                    <td>123.456.789-88</td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio12" value="Administrador">
-                        <label class="form-check-label" for="radio12">Administrador</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio22" value="Autor" checked>
-                        <label class="form-check-label" for="radio22">Autor</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="radiogroup2" id="radio32" value="Comentarista">
-                        <label class="form-check-label" for="radio32">Comentarista</label>
-                      </div>
-                    </td>
-                    <td>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="authorized2" id="authorized2" value="TRUE" checked>
-                        <label class="form-check-label" for="autorized2">Autorizado</label>
-                      </div>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <button type="submit" class="btn float-right btn-primary">Salvar</button>
-          </form>
-        </main>
-      </div>
+          <button type="submit" class="btn float-right btn-primary">Salvar</button>
+        </form>
+      </main>
     </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 
-    <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-    <script>
-      feather.replace()
-    </script>
+  <!-- Icons -->
+  <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+  <script>
+    feather.replace()
+  </script>
+  <script src="usuarios.js"></script>
+</body>
 
-    <!-- Graphs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
-    </script>
-  </body>
 </html>
