--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sair</a>
+          <a class="nav-link" href="../index.html">Sair</a>
         </li>
       </ul>
     </nav>
