--- a/web/admin/usuarios/index.html
+++ b/web/admin/usuarios/index.html
@@ -21,7 +21,7 @@
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sair</a>
+        <a class="nav-link" href="../../index.html">Sair</a>
       </li>
     </ul>
   </nav>
@@ -50,19 +50,19 @@
           </h6>
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="../novo-post/index.html">
                 <span data-feather="plus-circle"></span>
                 Nova Postagem
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="../meus-posts/index.html">
                 <span data-feather="file"></span>
                 Minhas Postagens
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="../aprovacoes-post/index.html">
                 <span data-feather="file-text"></span>
                 Aprovações
               </a>
@@ -73,7 +73,7 @@
           </h6>
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="../aprovacoes-comentario/index.html">
                 <span data-feather="file-text"></span>
                 Aprovações
               </a>
