Corrige importações e paths

--- a/web/admin/index.html
+++ b/web/admin/index.html
@@ -9,7 +9,7 @@
     <title>Adm Panel</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="admin.css" rel="stylesheet">
@@ -20,7 +20,7 @@
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="../index.html">Sair</a>
+          <a class="nav-link" href="/index.html">Sair</a>
         </li>
       </ul>
     </nav>
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="usuarios/index.html">
+                <a class="nav-link" href="/admin/usuarios/index.html">
                   <span data-feather="users"></span>
                   Usuários
                 </a>
@@ -49,19 +49,19 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="novo-post/index.html">
+                <a class="nav-link" href="/admin/novo-post/index.html">
                   <span data-feather="plus-circle"></span>
                   Nova Postagem
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="meus-posts/index.html">
+                <a class="nav-link" href="/admin/meus-posts/index.html">
                   <span data-feather="file"></span>
                   Minhas Postagens
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-post/index.html">
+                <a class="nav-link" href="/admin/aprovacoes-post/index.html">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -72,7 +72,7 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="aprovacoes-comentario/index.html">
+                <a class="nav-link" href="/admin/aprovacoes-comentario/index.html">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -96,11 +96,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/vendor/jquery-slim.min.js"></script>
+    <script src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 
     <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script src="/assets/js/vendor/feather.min.js"></script>
     <script>
       feather.replace()
     </script>
