--- a/web/sign-in/index.html
+++ b/web/sign-in/index.html
@@ -9,15 +9,15 @@
     <title>Signin Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
-    <form class="form-signin" action="../devWeb" method = "POST">
-      <img class="mb-4" src="../assets/img/user_icon.png" alt="" width="108" height="108">
+    <form class="form-signin" action="devWeb" method = "POST">
+      <img class="mb-4" src="/assets/img/user_icon.png" alt="" width="108" height="108">
       <label for="inputCPF" class="sr-only">CPF</label>
       <input type="text" id="inputCPF" class="form-control" placeholder="Entrada vazia" name = "cpf" autofocus>
       <label for="inputPassword" class="sr-only">Senha</label>
