--- a/web/admin/novo-post/index.html
+++ b/web/admin/novo-post/index.html
@@ -8,11 +8,11 @@
 
     <title>Adm Panel</title>
 
-    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.css">
-    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.snow.css">
-    <link rel="stylesheet" href="../../assets/modules/quill/dist/css/quill.bubble.css">
+    <link rel="stylesheet" src="/assets/modules/quill/dist/css/quill.css">
+    <link rel="stylesheet" src="/assets/modules/quill/dist/css/quill.snow.css">
+    <link rel="stylesheet" src="/assets/modules/quill/dist/css/quill.bubble.css">
     <!-- Bootstrap core CSS -->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="usuarios.css" rel="stylesheet">
@@ -24,7 +24,7 @@
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Blog Dev</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="../../index.html">Sair</a>
+          <a class="nav-link" href="/index.html">Sair</a>
         </li>
       </ul>
     </nav>
@@ -35,13 +35,13 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="../index.html">
+                <a class="nav-link active" href="/admin/index.html">
                   <span data-feather="home"></span>
                   Dashboard <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../usuarios/index.html">
+                <a class="nav-link" href="/admin/usuarios/index.html">
                   <span data-feather="users"></span>
                   Usuários
                 </a>
@@ -59,13 +59,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../meus-posts/index.html">
+                <a class="nav-link" href="/admin/meus-posts/index.html">
                   <span data-feather="file"></span>
                   Minhas Postagens
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../aprovacoes-post/index.html">
+                <a class="nav-link" href="/admin/aprovacoes-post/index.html">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -76,7 +76,7 @@
             </h6>
             <ul class="nav flex-column mb-2">
               <li class="nav-item">
-                <a class="nav-link" href="../aprovacoes-comentario/index.html">
+                <a class="nav-link" href="/admin/aprovacoes-comentario/index.html">
                   <span data-feather="file-text"></span>
                   Aprovações
                 </a>
@@ -103,16 +103,16 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../assets/js/bootstrap/bootstrap.min.js"></script>
-    <script src="../../assets/modules/quill/dist/sprite.svg.js"></script>
-    <script src="../../assets/modules/quill/dist/bootstrap-quill.js"></script>
+    <script src="/assets/js/vendor/jquery-slim.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="/assets/js/vendor/popper.min.js"></script>
+    <script src="/assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="/assets/modules/quill/dist/sprite.svg.js"></script>
+    <script src="/assets/modules/quill/dist/bootstrap-quill.js"></script>
     <script src="novo-post.js"></script>
 
     <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script src="/assets/js/vendor/feather.min.js"></script>
     <script>
       feather.replace()
     </script>    
