--- a/web/assets/modules/quill/demo/index.html
+++ b/web/assets/modules/quill/demo/index.html
@@ -13,10 +13,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="../dist/css/quill.css">
-  <link rel="stylesheet" href="../dist/css/quill.snow.css">
-  <link rel="stylesheet" href="../dist/css/quill.bubble.css">
-  <script src="../dist/bootstrap-quill.js"></script>
+  <link rel="stylesheet" href="dist/css/quill.css">
+  <link rel="stylesheet" href="dist/css/quill.snow.css">
+  <link rel="stylesheet" href="dist/css/quill.bubble.css">
+  <script src="dist/bootstrap-quill.js"></script>
 </head>
 
 <body>
@@ -40,7 +40,7 @@ src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 <div class="jquery-script-clear"></div>
 </div>
 </div>
-  <script src="../dist/sprite.svg.js"></script>
+  <script src="dist/sprite.svg.js"></script>
   <main class="container" style="margin:150px auto">
 <h1>Bootstrap 4 Quill Editor Demos</h1>
     <h2 class="display-4 mt-5">Classic editor</h2>
