--- a/web/index.html
+++ b/web/index.html
@@ -9,11 +9,10 @@
     <title>Blog Template · Bootstrap</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/blog/">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="/assets/js/vendor/jquery-slim.min.js"></script>
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <link href="/assets/css/bootstrap.bundle.min.css" rel="stylesheet">
+    <script src="/assets/js/bootstrap/bootstrap.min.js"></script>
 
     <style>
       .bd-placeholder-img {
@@ -47,7 +46,7 @@
         <a class="blog-header-logo text-dark" href="#">Dev Blog Web</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="btn btn-sm btn-outline-secondary" href="sign-in/index.html">Entrar</a>
+        <a class="btn btn-sm btn-outline-secondary" href="/sign-in/index.html">Entrar</a>
       </div>
     </div>
   </header>
@@ -75,7 +74,7 @@
     <div class="col-md-8 blog-main">
 
       <div class="blog-post">
-        <h2 class="blog-post-title"><a href="post-detail/index.html?id=123">Sample blog post</a></h2>
+        <h2 class="blog-post-title"><a href="/post-detail/index.html?id=123">Sample blog post</a></h2>
         <p class="blog-post-meta">January 1, 2014 by Mark</p>
 
         <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
@@ -108,7 +107,7 @@
       </div><!-- /.blog-post -->
 
       <div class="blog-post">
-        <h2 class="blog-post-title"><a href="post-detail/index.html?id=124">Another blog post</a></h2>
+        <h2 class="blog-post-title"><a href="/post-detail/index.html?id=124">Another blog post</a></h2>
         <p class="blog-post-meta">December 23, 2013 by Jacob</p>
 
         <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
@@ -120,7 +119,7 @@
       </div><!-- /.blog-post -->
 
       <div class="blog-post">
-        <h2 class="blog-post-title"><a href="post-detail/index.html?id=127">New feature</a></h2>
+        <h2 class="blog-post-title"><a href="/post-detail/index.html?id=127">New feature</a></h2>
         <p class="blog-post-meta">December 14, 2013 by Chris</p>
 
         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
