Insere parte administrativa RF 1 ao 6

--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
         <a class="blog-header-logo text-dark" href="#">Dev Blog Web</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="btn btn-sm btn-outline-secondary" href="sign-in/index.html">Entrar</a>
+        <a class="btn btn-sm btn-outline-secondary" href="sign-in/index.jsp">Entrar</a>
       </div>
     </div>
   </header>
